src/client/chrome/css/app.css
/* ... */
.bar-text-col{
  height: 100%;
  display: flex;
  flex-direction: column;
  justify-content: space-around;;
  color: $base-white;
  font-size: 12px;
  line-height: 15px;
  width: 45%;
}

.bar-text-col p{
  margin: 0;
}


//WC TODO: change css of blacklist bar and url bar to common component?
.blacklist-bar {
  height: 40px;
  line-height: 40px;
  margin: 5px auto;
  border-radius: 3px;
  width: 95%;
  background-color: $canteloupe;
  color: $base-white;
  padding: 0px 6px;
  display: flex;
  justify-content: space-between;
}

.blacklist-button {
  line-height: $bar-height;
  height: $bar-height;
}

.blacklist-bar-info {
  display: flex;
  height: $bar-height;
  width: 150px;
  justify-content: space-between;
}

.url-bar-category {
  color: $base-white;
  float: left;
  background-color: $canteloupe;
  padding: 0 10px;
  height: 30px;
  border-radius: 2px;
  margin: 5px;
  display: flex;
  justify-content: space-between;
  line-height: 30px;
}

.bar-category{
  margin: 5px auto;
  max-width: 150px;
}

.url-bar-category-times {
  display: inline;
  position: relative;
  padding-left: 10px;
}
.url-bar-category-times:hover{
  color: $watermelon;
}

.url{
  color: $banana;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  width: 95%;
  font-size: 15px;
}

.url:hover {
  color: $base-white;
}

.url-categories{
  display: flex;
  float:right;
  overflow: auto;
  margin-right: 1%;
  width: 45%;
}

.lookback-container{
  width: 98%;
  margin: 5px 1%;
  height: calc(100% - 290px);
  overflow: scroll;
  background-color: white;
  border:solid 1px $electric-blue;
  position:absolute;
  min-width: 800px;
}

.domain-info {
  padding-left: 5px;
  padding-right: 5px;
  font-size: small;
}

.lookback-graph-container{
  min-width: 800px;
  flex-grow: 1;
  position: relative;
  height: inherit;
  width: inherit;
  margin-right: 4px;
}

.lookback-details-container{
  text-align: center;
  display: flex;
  padding: 10px;
  width: 100%;
  height: 135px;
  background-color: $canteloupe;
  min-width: 400px;
  color: $base-white;
}

/*BUTTONS*/
#back-button{
  border: 0;
  background: $electric-blue;
  border-radius: 4px;
  color: $base-white;
  font-size: 15;
  transition-duration: 0.4s;
  margin-right: 5px;
  margin-left: 5px;
  height: 27px;
}

#back-botton:hover {
    background: red;
    color: red;
}

.side-bar-container{
  margin: 2px;
  color: $canteloupe;
  display: inline-block;
  width: 220px;
  min-width: 220px;
  height: 100%;
  background-color: $base-white;
  border-right: solid 1px $electric-blue;
  padding-right: 5px;
}

.fixed-header {
  position: fixed;
}

.all-categories {
  overflow-y: auto;
  padding-right: 5px;
}

.hide-overflow{
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

.domain-bar{
  height: 22px;
  border: solid 1px $electric-blue;
  color: $canteloupe;
  display:inline-block;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 1px;
  border-radius: 2px;
  padding: 0 2px;
  position:flex;
  z-index: 10;
  min-width: 24px;
  &:hover {
    border-color: $canteloupe;
  }
}

.domain-favicon {
  width: 15px;
  height: 15px;
  margin-bottom: 4px;
  margin-right: 8px;
}

.display-favicon {
  width:25px;
  height:25px;
  margin-right: 10px;
}

.flex-row{
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
}

.previousPath {
  border-color: $banana;
}

start-time-label .end-time-label{
  font-size: 15;
  color: $electric-blue;
  width: auto;
}

.site-title{
  font-size: 35px;
  margin-right: 15px;
  color: $base-white;
  font-weight: bold;
  font-family: 'Poiret One', cursive;
}

.search-results-container {
  width: 100%;
  height: 97%;
  margin: 5px auto;
  overflow: auto;
}

.categories-page {
  height: 92.5vh;
  display: flex;
  flex-direction: row;
}
#graph-plus-buttons{
  display: flex;
  width: 100%;
  position: absolute;
  height: 100%;
  justify-content: space-between;
}

.time-change-button {
  width:35px;
}

#time-change-btn-buffer-lft{
  width: 3px;
  min-height: 60px;
  height: calc(50% - 75px);
  position: relative;
}

#time-change-btn-buffer-rt{
  width: 3px;
  min-height: 60px;
  height: calc(50% - 80px);
  position: relative;
}

#time-change-btn-wrapper{
  position: relative;
  left:4px;
}
.arrow-btn:hover{
  color: $hover-color;
  cursor:pointer;
}

.timeline-label-row{
  width: 100%;
}

#slider-wrapper{
  width:30%;
  margin-left: 30px;
}

.jump-btn{
  background-color: #4897D8;
  font-size: 14px;
  font-weight: 400;
  line-height: 1.42857143;
  text-align: center;
  vertical-align: middle;
  color: #FAFAFA;
  padding: 5px 6px;
}
.jump-btn:hover{
  background-color: $electric-blue-dark;
  cursor:pointer;
}

#lookback-slider{
  background-color: #FAFAFA;
}

.ant-slider{
  border-top-color: #FAFAFA;
  border-bottom-color: #FAFAFA;
}

#timeline-label-row-top{
  height: 40px;
  display: flex;
  align-items: center;
}

#timeline-label-row-btm{
  display: flex;
  flex-direction: row;
  align-items: center;
}

.time-labels{
  margin: 10px 15px 0px 15px;
  height: 80px;
  min-width: 800px;
}
#time-break-min-box-left{
  position:relative;
  float:left;
  width:calc(33% - 190px);
  min-width:1px;
}

#time-break-min-box-right{
  position:relative;
  float:left;
  width:26%;
  min-width:1px;
}

#time-break-line-label1, #time-break-line-label2{
  position: relative;
  font-size: larger;
}


#end-date-label{
  margin-left: auto;
  font-size: larger;
}

#time-break-container{
  height:100%;
  width:100%;
  z-index:1;
  position:absolute;
  display: flex;
}

#tabs-container{
  height:100%;
  width:100%;
  z-index:10;
  position:relative;
}

.time-break-line{
  height:100%;
  border-right: 1px solid $banana;
  position:relative;
  z-index: 1;
}

#first-time-break{
  width: 33%;
  float:left;
}

#second-time-break{
  width: 33%;
  float: left;
}
/* ... */

